[gd_scene load_steps=3 format=3 uid="uid://cj3s7u5scc3y"]

[ext_resource type="Script" uid="uid://bskp0t34ff0qs" path="res://src/ui/HUD.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp"]
bg_color = Color(0.8, 0.2, 0.2, 0.9)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 6

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Crosshair" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Vertical" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -8.0
offset_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.8)

[node name="Horizontal" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -1.0
offset_right = 8.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.8)

[node name="BottomLeft" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -131.0
offset_right = 300.0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="BottomLeft"]
layout_mode = 2

[node name="HPContainer" type="VBoxContainer" parent="BottomLeft/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HPTitle" type="Label" parent="BottomLeft/VBoxContainer/HPContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Health"

[node name="HPBar" type="ProgressBar" parent="BottomLeft/VBoxContainer/HPContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_hp")
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="BottomLeft/VBoxContainer/HPContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "100 / 100"

[node name="ShieldContainer" type="VBoxContainer" parent="BottomLeft/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ShieldTitle" type="Label" parent="BottomLeft/VBoxContainer/ShieldContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Shield"

[node name="ShieldBar" type="ProgressBar" parent="BottomLeft/VBoxContainer/ShieldContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
max_value = 50.0
value = 50.0
show_percentage = false

[node name="BottomRight" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="BottomRight"]
layout_mode = 2

[node name="WeaponLabel" type="Label" parent="BottomRight/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Pistol"
horizontal_alignment = 2

[node name="AmmoLabel" type="Label" parent="BottomRight/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "âˆž"
horizontal_alignment = 2

[node name="TopRight" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TopRight"]
layout_mode = 2

[node name="WaveLabel" type="Label" parent="TopRight/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Wave 1"
horizontal_alignment = 2
